# Autopark

./: CMakeLists.txt  README.md  SIM_TUNE.md  TEST_REPORT.md
data/: parking_map_v2.json  parking_scene.json  sensor_frame_example.json
include/autopark/: axis_fillet.hpp  bicycle_sim.hpp  connector_transfer.hpp  forward_overshoot.hpp  geometry_lane.hpp  parking_simulate.hpp  reverse_bezier.hpp  sim_tune.hpp  types.hpp  viz_svg.hpp
outputs/: _debug_r0_i9_result.json  _debug_r0_i9_scene.json  parking_map_v3_four_slots_sim.json  parking_result_baseline.json  parking_result_cpp.json  parking_result_sensor.json
outputs/batch_viz_map_v2_5slots/: summary.json
outputs/batch_viz_map_v2_5slots_ratio279_162_rerun/: summary.json
outputs/batch_viz_map_v2_5slots_rerun/: summary.json
outputs/batch_viz_map_v2_all20/: summary.json
sample_outputs/batch_viz/: summary.json
src/: axis_fillet.cpp  bicycle_sim.cpp  geometry_lane.cpp  main.cpp  parking_simulate.cpp  reverse_bezier.cpp  viz_svg.cpp
src/src/: connector_transfer.cpp  forward_overshoot.cpp
